--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -17,7 +17,7 @@ on:
 jobs:
   build:
     name: Build and analyze
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     container: ghcr.io/zephyrproject-rtos/ci:v0.27.4
     env:
       BUILD_WRAPPER_OUT_DIR: build_wrapper_output_directory # Directory where build-wrapper output will be placed
@@ -39,63 +39,79 @@ jobs:
       - name: Initialize
         working-directory: thingy91x-oob
         run: |
+          if [ ! -d "../.west" ]; then
             west init -l .
-            west config manifest.group-filter +bsec
-            west config build.sysbuild True
-            west update -o=--depth=1 -n
-            west blobs fetch hal_nordic
+          else
+            echo ".west folder already exists, skipping west init."
+          fi
+          west update -o=--depth=1 -n
+          west blobs fetch hal_nordic
 
       - name: Install dependencies
         run: |
-            pip install -r nrf/scripts/requirements-build.txt
-            apt-get update
-            apt install -y curl ruby-full
+          # The Matter IDL is part of requirements-build.txt, but it's not available
+          # in pypi so we need to install it from the source code
+          MATTER_IDL_PATH=modules/lib/matter/scripts/py_matter_idl
+          if [ -d $MATTER_IDL_PATH ]; then
+            pip install -e $MATTER_IDL_PATH
+          fi
+          pip install -r nrf/scripts/requirements-fixed.txt
+          apt-get update
+          apt install -y curl ruby-full
 
-      - name: Install sonar-scanner and build-wrapper
-        uses: SonarSource/sonarcloud-github-c-cpp@v3
+      - name: Install Build Wrapper
+        uses: SonarSource/sonarqube-scan-action/install-build-wrapper@v6.0.0
 
       - name: Build and test
         working-directory: thingy91x-oob
         run: |
-          build-wrapper-linux-x86-64 --out-dir ${{ env.BUILD_WRAPPER_OUT_DIR }} west twister -T . -C --coverage-platform=native_sim -v --inline-logs --integration
+          build-wrapper-linux-x86-64 --out-dir ${{ env.BUILD_WRAPPER_OUT_DIR }} \
+              west twister -T tests/ \
+              --enable-coverage \
+              --coverage-platform=native_sim \
+              -v \
+              --inline-logs \
+              --integration
 
       - name: Extract coverage into sonarqube xml format
         working-directory: thingy91x-oob
         run: |
           gcovr twister-out -v --merge-mode-functions=separate --exclude='twister-out|drivers' --sonarqube coverage.xml
 
-      - name: Run sonar-scanner on main
-        working-directory: thingy91x-oob
+      - name: SonarQube Scan on main
         if: github.event_name != 'pull_request'
+        uses: SonarSource/sonarqube-scan-action@v6.0.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: |
-          sonar-scanner \
-            --define sonar.cfamily.build-wrapper-output="${{ env.BUILD_WRAPPER_OUT_DIR }}" \
-            --define project.settings=sonar-project.properties \
-            --define sonar.coverageReportPaths=coverage.xml \
-            --define sonar.inclusions=**/*.c,**/*.h \
+        with:
+          args: |
+            --define sonar.cfamily.build-wrapper-output=thingy91x-oob/${{ env.BUILD_WRAPPER_OUT_DIR }}
+            --define sonar.projectKey=hello-nrfcloud_firmware
+            --define sonar.organization=hello-nrfcloud-com-firmware
+            --define sonar.host.url=https://sonarcloud.io
+            --define sonar.coverageReportPaths=coverage.xml
+            --define sonar.inclusions=**/*.c,**/*.h
             --define sonar.exclusions=tests/,drivers/sensor/*_dummy/
+          projectBaseDir: thingy91x-oob
 
-      - name: Run sonar-scanner on PR
-        working-directory: thingy91x-oob
+      - name: SonarQube Scan on PR
         if: github.event_name == 'pull_request'
+        uses: SonarSource/sonarqube-scan-action@v6.0.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          PR_NUMBER: ${{ github.event.pull_request.number }}
-          PR_BRANCH: ${{ github.event.pull_request.head.ref }}
-          BASE_REF: ${{ github.event.pull_request.base.ref }}
-          HEAD_SHA: ${{ github.event.pull_request.head.sha }}
-        run: |
-          sonar-scanner \
-            --define sonar.cfamily.build-wrapper-output="${{ env.BUILD_WRAPPER_OUT_DIR }}" \
-            --define project.settings=sonar-project.properties \
-            --define sonar.coverageReportPaths=coverage.xml \
-            --define sonar.inclusions=**/*.c,**/*.h \
-            --define sonar.exclusions=tests/,drivers/sensor/*_dummy/ \
-            --define sonar.scm.revision=${{ env.HEAD_SHA }} \
-            --define sonar.pullrequest.key=${{ env.PR_NUMBER }} \
-            --define sonar.pullrequest.branch=${{ env.PR_BRANCH }} \
-            --define sonar.pullrequest.base=${{ env.BASE_REF }}
+        with:
+          args: |
+            --define sonar.cfamily.build-wrapper-output=thingy91x-oob/${{ env.BUILD_WRAPPER_OUT_DIR }}
+            --define sonar.projectKey=hello-nrfcloud_firmware
+            --define sonar.organization=hello-nrfcloud-com-firmware
+            --define sonar.host.url=https://sonarcloud.io
+            --define sonar.coverageReportPaths=coverage.xml
+            --define sonar.inclusions=**/*.c,**/*.h
+            --define sonar.exclusions=tests/,drivers/sensor/*_dummy/
+            --define sonar.scm.revision=${{ github.event.pull_request.head.sha }}
+            --define sonar.pullrequest.key=${{ github.event.pull_request.number }}
+            --define sonar.pullrequest.branch=${{ github.event.pull_request.head.ref }}
+            --define sonar.pullrequest.base=${{ github.event.pull_request.base.ref }}
+          projectBaseDir: thingy91x-oob
