--- a/app/overlay-memfault.conf
+++ b/app/overlay-memfault.conf
@@ -14,6 +14,7 @@ CONFIG_MEMFAULT_NCS_LOCATION_METRICS=y
 CONFIG_MEMFAULT_HTTP_DEDICATED_WORKQUEUE_STACK_SIZE=1560
 CONFIG_MEMFAULT_COREDUMP_FULL_THREAD_STACKS=y
 CONFIG_MEMFAULT_EVENT_STORAGE_SIZE=2048
+CONFIG_MEMFAULT_NRF_PLATFORM_BATTERY_NPM13XX=y
 
 # Memfault depends on POSIX, disable unneeded POSIX features
 CONFIG_POSIX_FILE_SYSTEM=n
